       recommended. Issue #107.
     - Removed the special-case handling of the user's full name fetched from
       the system on OS X.
     - Added call to `sleep` to test in an attempt to fix SQLite failures.
     - The SQLite engine now requires that the SQLite client be 3.3.9 or
       later, for support of the `-bail` option.
     - Bug fix: The MySQL engine now properly uses the host and port options
       when connecting to the database. Thanks to vreb87 for the report!

0.980  2013-08-28T21:40:00Z
     - Changed the default SQLite Sqitch database name from
       `$dbname-sqitch.$suffix` to `sqitch.$suffix`. The `$suffix` still
       comes from the destination database name. This breaks compatibility
       with previous releases. If you need the old name, set it with
       `sqitch config core.sqlite.sqitch_db $dbname`.
     - Fixed encoding of the user's full name when fetched from the system on
       OS X. Thanks to Tomohiro Hosaka for the pull request!
     - Fixed test failures when DBD::SQLite is installed but compiled with
       SQLite 3.7.10 or lower.
     - Fixed a bug where declaring a dependency on a reworked change would
       incorrectly result in the error "Key "foo" matches multiple changes".
       Thanks to BryLo for the report (issue #103).
     - Modified tests to allow them to run in parallel without stomping on
       each other.
     - Bundling of options, such as `-vvv`, now works properly (issue #108).
     - Added alias `--get-regexp` for `--get-regex` to the `config` command.
       This brings it in line with the documentation for the `config` command
       (Issue #110).
     - Fixed all of the `config` command actions that contain a dash so that
       they actually work. Thanks to Ștefan Suciu for the report (issue #110).
     - All leading and trailing white space is now trimmed from plan notes,
       rather than just vertical white space. Thanks to Ronan Dunklau for the
       report (issue #106).